# captcha-break

./: LICENSE  README.md
basic/: CMakeLists.txt  README.md  basic.cpp  main.cpp  ocr_decoder.h  ocrdecoder.cpp  recognizer
basic/cpp/: .gitignore  CMakeLists.txt  README.md  main.cpp  ocr_decoder.cpp
basic/python/: README.md  recognize.py
csdn/: README.md
csdn/cpp/: README.md
csdn/cpp/spliter/: .gitignore  CMakeLists.txt
csdn/downloader/: downloader.go  downloader.py
csdn/python/: README.md
csdn/python/recognizer/: .gitignore  (+1 more)
csdn/recognizer/: CMakeLists.txt  main.cpp
csdn/spliter/: CMakeLists.txt  main.cpp  spliter_run.py
csdn_download/: README.md
csdn_download/captcha_downloader/: downloader.go
imooc/: README.md
imooc/downloader/: downloader.py
imooc/spliter/: .gitignore
jikexueyuan/: README.md
jikexueyuan/downloader/: Gif2PngConverter.py  downloader.go  downloader.py
jikexueyuan/python/: .gitignore  README.md
jikexueyuan/spliter/: captcha_utils.cpp  captcha_utils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  spliter.pro
submail/: README.md
submail/cpp/: README.md
submail/cpp/recognizer/: CMakeLists.txt  main.cpp
submail/downloader/: downloader.py
submail/spliter/: CMakeLists.txt  main.cpp
weibo.cn/: README.md
weibo.cn/build-weibo_captcha_break-Desktop_Qt_5_5_0_GCC_64bit-Debug/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h  weibo_captcha_break
weibo.cn/build-weibo_captcha_break-Desktop_Qt_5_6_0_clang_64bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
weibo.cn/captcha_downloader/: download_and_convert.sh
weibo.cn/cpp/: README.md
weibo.cn/downloader/: .gitignore  Gif2PngConverter.py  downloader.go  downloader.py  requirements.txt
weibo.cn/python/: .gitignore  README.md  requirements.txt
weibo.cn/recognizer/: CMakeLists.txt  captcha_utils.cpp  main.cpp  spliter.cpp  spliter.h  weibo.cn-nn-weights
weibo.cn/spliter/: .gitignore  CMakeLists.txt  __init__.py  __main__.py  captcha_utils.cpp  captcha_utils.h  captcha_utils.py  harris_detector.cpp  harris_detector.h  histogram1d.cpp  main.cpp  mainwindow.cpp  mainwindow.h  requirements.txt  spliter.cpp  spliter.h  spliter.py  spliter_run.py  weibo_captcha_break.pro  weibo_captcha_break.pro.user.ec1c50e
weibo.cn/tensorflow-impl/: .gitignore  README.md  README.txt  __init__.py  _recognize_p.py  check_dataset.py  common.py  format_dataset.py  load_model_nn.py  load_models.py  recognize.py  recognize_test.py  requirements.txt  run_recognize.sh  train.py
weibo.cn/tensorflow-trainer/: .gitignore  README.md  check_dataset.py  load_models.py  train.py
weibo.cn/trainer/: .gitignore  CMakeLists.txt  main.cpp
weibo.cn/weibo_captcha_break/: captcha_utils.cpp  histogram1d.h  mainwindow.ui  weibo_captcha_break.pro  weibo_captcha_break.pro.user.1919ed2  weibo_captcha_break.pro.user.c984c0c
weibo.cn2/: README.md
weibo.cn2/generate_dataset/: main.py
weibo.cn2/python/: README.md
weibo.cn2/recognizer/: split.py
weibo.cn2/trainer/: check_dataset.py  load_models.py  train.py
weibo.com/: .gitignore  README.md  weibo.com-process.ipynb
weibo.com/downloader/: downloader.py
weibo.com/yundama/: .gitignore  create_dataset.py  secret.sample.py
(+52 files in other folders)
